<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_save_connection"
        android:icon="@drawable/ic_done"
        android:orderInCategory="100"
        android:title="@string/action_add_connection"
        app:showAsAction="ifRoom" />

</menu>

